# meteowebsite

./: README.md  pyproject.toml
meteowebsite/: manage.py
meteowebsite/backend/: admin.py  models.py  serializers.py  views.py
meteowebsite/backend/migrations/: 0001_initial.py  0002_rename_unit_symbol_datatype_unit.py
meteowebsite/frontend/templates/frontend/: index.html
meteowebsite/meteowebsite/: asgi.py  settings.py  urls.py  wsgi.py
meteowebsite/webpack/: package-lock.json  package.json  webpack.config.js
meteowebsite/webpack/src/: index.css  index.jsx  messages.jsx
meteowebsite/webpack/src/components/: CustomAntdTable.jsx  DataTable.jsx  IsMobileHook.jsx  Map.jsx
